syntax = "proto3";
package example;

option go_package = "github.com/goku321/pulsar-proto-x/schema/example;example";

message Nested {
    string name = 1;
    uint32 age = 2;
}

message Example {
    string uuid = 1;
    float float_value = 2;
    double double_value = 3;
    repeated string repeated_string = 4;
    map<string, string> mapped_string_value = 5;
    Nested nested = 6;
    repeated Nested repeated_nested = 7;
}